Fix long single line input not wrapping on output

--- a/style.css
+++ b/style.css
@@ -20,5 +20,8 @@ body {
 }
 
 .input { background: transparent; }
-.output { color: transparent }
+.output {
+  color: transparent;
+  white-space: pre-wrap;
+}
 .output .url { background: red; }
